[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-patent-workbench"
version = "0.1.0"
description = "Agent-agnostic patent deduplication workbench for an existing patent knowledge base."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "liutao" }
]
dependencies = []

[project.scripts]
codex-patent-workbench = "codex_patent_workbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
